# papillon

./: .gitignore  00-index.md  00-problem-and-proposals.md  99-HANDOFF.md  VOCABULARY.yaml
00-interview/: 01-implementation-mode.md  02-skill-architecture.md  04-execution-and-error.md  feedback.md
01-Planning/: 01-prd.md  02-common-spec.md  03-design-papillon.md  03-design-work-flow.md  04-design-review-hell.md  04-design-wtth.md  05-design-inquisition.md  50-runbook-template.md  51-expert-definitions.md  baseline-probability.md
01-Planning/03-papillon/: 00-index.md
01-Planning/04-design-wtth/: 00-core.md  01-review-prd.md  02-review-design.md  03-review-task.md
01-Planning/04-wtth/: 00-index.md
01-Planning/05-inquisition/: 00-index.md  ac-v0.1.0.md
01-Planning/06-shackled/: 00-index.md
01-Planning/07-metrics/: retro-template.md
01-Planning/08-ac/: ac-template-v3.2.md  ac-template-v3.3.md
01-Planning/09-formal/: 00-index.md  01-l0-scope.md
01-Planning/personas/: _schema.md  arch.md  be.md  code.md  dba.md  fe.md  inquisitor.md  ix.md  pm.md  po.md  sec.md  spec.md  (+2 more)
80-Issue/: 00-index.md
tools/: anonymize-exemplar.py
tools/ac-validator/: README.md  pyproject.toml
tools/ac-validator/scripts/: measure_art_iq_02.py  run_fixture.py
tools/ac-validator/src/papillon_ac/: __init__.py  ac_parser.py  fixture_runner.py  keywords.py  markdown_utils.py  scope.py
tools/ac-validator/tests/: test_ac_parser.py  test_fixture_runner.py  test_keywords.py  test_markdown_utils.py  test_scope.py
tools/ac-validator/tests/fixtures/: dry_run_output_code_01.txt
(+112 files in other folders)
