[project]
name = "papillon-ac"
version = "0.1.0"
description = "Papillon AC Template v3.2 validator utilities"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papillon_ac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
